--- a/style.scss
+++ b/style.scss
@@ -51,6 +51,7 @@ span{
         .instant-weather__description{
             font-size: 1.5em;
             margin: 0.5em;
+            text-transform: capitalize;
         }
 
         .instant-weather__wind{
