--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #000;
+  background-color: #FAFAFA;
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
 }
@@ -7,7 +7,7 @@ body {
 main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   height: 100vh;
   text-align: center;
 }
@@ -20,24 +20,17 @@ span {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  justify-content: space-between;
-  color: #fff;
-  height: 55vh;
-}
-.instant-weather .instant-weather__title {
-  font-size: 1.5em;
-  margin-top: 1em;
 }
 .instant-weather .instant-weather__bloc {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-self: center;
-  border: solid #fff;
+  border: solid #18181C;
   border-radius: 50%;
   height: 225px;
   width: 225px;
-  margin-bottom: 2em;
+  margin-top: 2em;
 }
 .instant-weather .instant-weather__bloc .instant-weather__temp {
   margin: 0;
@@ -49,18 +42,12 @@ span {
   margin: 0.5em;
   text-transform: capitalize;
 }
-.instant-weather .instant-weather__bloc .instant-weather__wind {
-  margin: 0;
-  font-size: 0.8em;
-}
 
 .hourly-weather {
   display: flex;
-  background-color: black;
   overflow-x: scroll;
 }
 .hourly-weather .hourly-weather__container {
-  color: #fff;
   margin: 0.8em;
 }
 .hourly-weather .hourly-weather__container .hourly-weather__hour {
@@ -71,7 +58,7 @@ span {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  border: solid #fff;
+  border: solid #18181C;
   border-radius: 10px;
   height: 80px;
   width: 50px;
@@ -89,7 +76,6 @@ span {
   overflow-x: scroll;
 }
 .day-weather .day-weather__container {
-  color: #fff;
   margin: 0.8em;
 }
 .day-weather .day-weather__container .day-weather__day {
@@ -100,7 +86,7 @@ span {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  border: solid #fff;
+  border: solid #18181C;
   border-radius: 10px;
   height: 100px;
   width: 50px;
@@ -114,6 +100,69 @@ span {
 }
 .day-weather .day-weather__container .day-weather__temp-bloc img {
   width: 100%;
+}
+
+.btn-toggle {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  width: 80px;
+  height: 30px;
+  border-radius: 15px;
+  background: #18181C;
+  color: #FAFAFA;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+body.light {
+  transition: 0.8s;
+}
+
+body.dark {
+  background-color: #18181C;
+  transition: 0.8s;
+  color: #FAFAFA;
+}
+body.dark .btn-toggle {
+  background: #f1f1f1;
+  color: #333;
+}
+body.dark .instant-weather .instant-weather__bloc {
+  border: solid #FAFAFA;
+}
+body.dark .hourly-weather .hourly-weather__container .hourly-weather__temp-bloc {
+  border: solid #FAFAFA;
+}
+body.dark .day-weather .day-weather__container .day-weather__temp-bloc {
+  border: solid #FAFAFA;
+}
+
+@media screen and (min-width: 570px) {
+  body {
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+  }
+  body main {
+    width: 570px;
+    height: 90vh;
+    border: solid #18181C;
+    border-radius: 20px;
+    margin: auto;
+  }
+  body .hourly-weather {
+    overflow-x: hidden;
+  }
+  body .day-weather {
+    overflow-x: hidden;
+  }
+
+  body.dark main {
+    border: solid #FAFAFA;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
